# hob

./: .gitmodules  Cargo.toml  README.md
examples/: musl.kdl
hob-derive/: Cargo.toml
hob-derive/src/: lib.rs
hob-utils/: Cargo.toml
hob-utils/src/: lib.rs
src/: main.rs
src/definition/: build_style.rs  mod.rs  parsing.rs
src/definition/actions/: mod.rs  parsing.rs
src/engine/: build_state.rs  environment.rs  extractor.rs  fetcher.rs  mod.rs  player.rs
src/engine/build_style/: mod.rs
src/engine/hooks/: mod.rs
src/engine/hooks/install/: collect_elf.rs  mod.rs  strip_binaries.rs
src/engine/hooks/package/: mod.rs
src/engine/packager/: apk.rs  mod.rs
src/utils/: elf.rs  mod.rs
